feat: update readme